feat: Add support for Neo4j 5.9 type constraints. (#1020)
Closes #1011.